--- a/package.json
+++ b/package.json
@@ -20,17 +20,14 @@
   "homepage": "https://github.com/damienlaine/webvoicesdk#readme",
   "dependencies": {},
   "devDependencies": {
-    "@tensorflow/tfjs": "^2.0.1",
-    "@tensorflow/tfjs-backend-cpu": "^2.0.1",
-    "@tensorflow/tfjs-backend-wasm": "^2.0.1",
-    "@tensorflow/tfjs-backend-webgl": "^2.0.1",
-    "@tensorflow/tfjs-core": "^2.0.1",
-    "dct": "^0.1.0",
-    "fftjs": "0.0.4",
+    "@tensorflow/tfjs": "^2.3.0",
+    "@tensorflow/tfjs-backend-cpu": "^2.3.0",
+    "@tensorflow/tfjs-backend-wasm": "^2.3.0",
+    "@tensorflow/tfjs-backend-webgl": "^2.3.0",
     "parcel-bundler": "^1.12.4",
-    "parcel-plugin-blob-tensorflowjs": "file:parcel/parcel-plugin-tensorflowjs-blob",
     "parcel-plugin-blob-wasm": "file:parcel/parcel-plugin-wasm-blob",
     "parcel-plugin-blob-worker": "file:parcel/parcel-plugin-worker-blob",
+    "parcel-plugin-tensorflowjs-blob": "^1.0.0",
     "rnnoise-wasm": "github:jitsi/rnnoise-wasm.git"
   },
   "browserslist": [
