--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@linto-ai/webvoicesdk",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Building blocks for voice-enabled applications in the browser",
   "author": "Damien Laine - LINAGORA",
   "keywords": [
@@ -34,10 +34,10 @@
   },
   "homepage": "https://github.com/linto-ai/WebVoiceSDK#readme",
   "devDependencies": {
-    "@tensorflow/tfjs": "^2.6.0",
-    "@tensorflow/tfjs-backend-cpu": "^2.6.0",
-    "@tensorflow/tfjs-backend-wasm": "^2.6.0",
-    "@tensorflow/tfjs-backend-webgl": "^2.6.0",
+    "@tensorflow/tfjs": "2.8.6",
+    "@tensorflow/tfjs-backend-cpu": "2.8.6",
+    "@tensorflow/tfjs-backend-wasm": "2.8.6",
+    "@tensorflow/tfjs-backend-webgl": "2.8.6",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-tensorflowjs-blob": "^1.0.0",
     "parcel-plugin-wasm-blob": "^1.0.0",
