--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
         "parcel-bundler": "^1.12.5",
         "parcel-plugin-tensorflowjs-blob": "^1.0.0",
         "parcel-plugin-wasm-blob": "^1.0.0",
-        "parcel-plugin-worker-blob": "^1.0.0",
-        "rnnoise-wasm": "github:jitsi/rnnoise-wasm.git"
+        "parcel-plugin-worker-blob": "^1.0.0"
     },
     "browserslist": [
         "since 2017-06"
